# lean-lldb

./: Dockerfile  Makefile  README.md  lean_lldb.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
formatters/: __init__.py  lean.py
tests/: Main.c  Makefile
